--- a/valentine.html
+++ b/valentine.html
@@ -10,9 +10,9 @@
     <div class="valentine-container">
         <h2>Feliz Dia dos Namorados, meu amor!</h2>
         <div class="image-gallery">
-            <img src="Imagens/WhatsApp Image 2025-06-12 at 09.49.06.jpeg" alt="Casal feliz 1">
-            <img src="Imagens/WhatsApp Image 2025-06-12 at 10.38.18.jpeg" alt="Casal feliz 2">
-            <img src="Imagens/WhatsApp Image 2025-06-12 at 11.08.01.jpeg" alt="Casal feliz 3">
+            <img src="WhatsApp Image 2025-06-12 at 09.49.06.jpeg" alt="Casal feliz 1">
+            <img src="WhatsApp Image 2025-06-12 at 10.38.18.jpeg" alt="Casal feliz 2">
+            <img src="WhatsApp Image 2025-06-12 at 11.08.01.jpeg" alt="Casal feliz 3">
             </div>
 
         
